--- a/src/index.scss
+++ b/src/index.scss
@@ -7,5 +7,6 @@
 @use 'styles/fonts';
 @use 'styles/typography';
 @use 'styles/layout';
+@use 'styles/indents';
 @use 'styles/z-index';
 @use 'styles/animations';
