--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -4,12 +4,17 @@
   font-weight: 400;
 
   color: rgb(255 255 255 / 87%);
-  background-color: #242424;
+  background-color: gray;
 
   font-synthesis: none;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+  height: 100%;
 }
 
 body,
@@ -27,6 +32,12 @@ a,
 button {
   margin: 0;
   padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 a {
