--- a/src/components/blocks/goods-table/goods-table.module.scss
+++ b/src/components/blocks/goods-table/goods-table.module.scss
@@ -16,9 +16,11 @@
 .table {
   position: relative;
   width: 100%;
+  height: 100%;
   border: 1px solid $white;
   border-collapse: collapse;
 
+  th,
   td {
     border: 1px solid $white;
     text-align: center;
@@ -43,10 +45,6 @@
   z-index: $z-index-default;
   background-color: $black;
   text-transform: uppercase;
-
-  th {
-    border: 1px solid $white;
-  }
 }
 
 .tbody {
